apply plugin: "java"

sourceCompatibility = 10
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'



eclipse.project {
    name = appName + "-core"
}